src/v7/CAPI_TSData.pas


end;
//------------------------------------------------------------------------------
function TSData_Get_EmergAmps(): Double; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.EmergAmps;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_EmergAmps(Value: Double); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        pTSData.EmergAmps := Value;
        ConductorSetDefaults(ConductorProps.EmergAmps, pTSData);
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_Diameter(): Double; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FRadius * 2.0;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_Diameter(Value: Double); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FRadius := Value / 2.0;
            ConductorSetDefaults(ConductorProps.diam, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_Radius(): Double; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FRadius;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_Radius(Value: Double); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FRadius := Value;
            ConductorSetDefaults(ConductorProps.Radius, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_GMRac(): Double; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FGMR60;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_GMRac(Value: Double); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FGMR60 := Value;
            ConductorSetDefaults(ConductorProps.GMRac, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_Rac(): Double; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FR60;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_Rac(Value: Double); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FR60 := Value;
            ConductorSetDefaults(ConductorProps.Rac, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_Rdc(): Double; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FRDC;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_Rdc(Value: Double); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FRDC := Value;
            ConductorSetDefaults(ConductorProps.Rdc, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_GMRUnits(): Integer; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FGMRUnits;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_GMRUnits(Value: Integer); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FGMRUnits := Value;
            ConductorSetDefaults(ConductorProps.GMRunits, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_RadiusUnits(): Integer; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FRadiusUnits;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_RadiusUnits(Value: Integer); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FRadiusUnits := Value;
            ConductorSetDefaults(ConductorProps.radunits, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_ResistanceUnits(): Integer; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FResistanceUnits;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_ResistanceUnits(Value: Integer); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FResistanceUnits := Value;
            ConductorSetDefaults(ConductorProps.Runits, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_EpsR(): Double; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FEpsR;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_EpsR(Value: Double); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FEpsR := Value;
            CableDataSetDefaults(CableDataProps.EpsR, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_InsLayer(): Double; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FInsLayer;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_InsLayer(Value: Double); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FInsLayer := Value;
            CableDataSetDefaults(CableDataProps.InsLayer, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_DiaIns(): Double; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FDiaIns;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_DiaIns(Value: Double); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FDiaIns := Value;
            CableDataSetDefaults(CableDataProps.DiaIns, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_DiaCable(): Double; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FDiaCable;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_DiaCable(Value: Double); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FDiaCable := Value;
            CableDataSetDefaults(CableDataProps.DiaCable, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_DiaShield(): Double; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FDiaShield;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_DiaShield(Value: Double); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FDiaShield := Value;
            TSDataSetDefaults(TSDataProps.DiaShield, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_TapeLayer(): Double; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FTapeLayer;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_TapeLayer(Value: Double); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FTapeLayer := Value;
            TSDataSetDefaults(TSDataProps.TapeLayer, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_TapeLap(): Double; CDECL;
var
    pTSData: TTSDataObj;
begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        Result := pTSData.FTapeLap;
    end;
end;
//------------------------------------------------------------------------------
procedure TSData_Set_TapeLap(Value: Double); CDECL;
var
    pTSData: TTSDataObj;
begin
    if ActiveCircuit <> NIL then
    begin
        pTSData := TSDataClass.GetActiveObj;
        with pTSData do
        begin
            FTapeLap := Value;
            TSDataSetDefaults(TSDataProps.TapeLap, pTSData);
        end;
    end;
end;
//------------------------------------------------------------------------------
function TSData_Get_idx(): Integer; CDECL;
begin
    Result := TSDataClass.ElementList.ActiveIndex
end;
